# jfb

./: .gitignore  Cargo.toml  README.md
examples/testing/: .gitignore  jfb.toml
examples/testing/testbin/include/: foo.h
examples/testing/testbin/src/: main.c
src/: config.rs  main.rs
src/commands/: build.rs  clean.rs  mod.rs  new.rs  run.rs
