[package]
name = "jfb"
description = "Just F-ing Build: A simple and opinionated build tool for C/C++ projects, inspired by Cargo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
glob = "0.3.3"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
toml = "0.9.5"
xshell = "0.2.7"
