[package]
name = "jfb"
description = "Just F-ing Build: A simple and opinionated build tool for C/C++ projects, inspired by Cargo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
xshell = "0.2"
